# SMR

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  ChangeLog  Makefile  README.md
.claude/skills/smr-codebase/: SKILL.md
cmake/: CPM.cmake  SMRMKL.cmake  hpc-toolchain.cmake
include/: CommFunc.hpp  SMR.hpp  StrFunc.hpp  config.h
resources/: smr.desktop
scripts/hpc/: build.sh
scripts/local/: build.sh
scripts/scripts/hpc/: build.sh
src/: CommFunc.cpp  CommFunc.hpp  SMR.cpp  SMR.hpp  SMR_data.cpp  SMR_data.hpp  SMR_data_p1.cpp  SMR_data_p1.hpp  SMR_data_p2.cpp  SMR_data_p2.hpp  SMR_data_p3.cpp  SMR_data_p3.hpp  SMR_plot.cpp  SMR_plot.hpp  StatFunc.cpp  StatFunc.hpp  StrFunc.cpp  StrFunc.hpp  bfile.cpp  bfile.hpp  cdflib.hpp  config.h  dcdflib.cpp  dcdflib.hpp  error_codes.hpp  ipmpar.hpp  mmap_read.cpp  mmap_read.hpp  perf_timer.cpp  perf_timer.hpp
